--- a/styles/style.css
+++ b/styles/style.css
@@ -2,6 +2,9 @@
 @tailwind components;
 @tailwind utilities;
 
+html {
+  scroll-behavior: smooth;
+}
 @font-face {
   font-family: "Lato";
   src: url("../src/assets/fonts/Lato-Regular.woff2") format("woff2"),
